--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^6.1.5",
     "axios": "^1.7.7",
     "react": "^18.3.1",
+    "react-date-picker": "^11.0.0",
     "react-dom": "^18.3.1",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.27.0",
