--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.5",
+    "@mui/lab": "^6.0.0-beta.17",
     "@mui/material": "^6.1.5",
+    "@mui/x-date-pickers": "^7.23.0",
+    "@mui/x-date-pickers-pro": "^7.23.0",
     "axios": "^1.7.7",
+    "date-fns": "^4.1.0",
     "react": "^18.3.1",
     "react-date-picker": "^11.0.0",
     "react-dom": "^18.3.1",
